[project]
name = "BEoRN"
version = "2.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

# include in docs
dependencies = [
    "astropy>=7.0.1",
    "h5py>=3.13.0",
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "scipy>=1.15.2",
    "tools21cm>=2.2.10",
    "pylians>=0.12",
]
# end include in docs


[project.optional-dependencies]
extra = [
    "21cmfast",
]


[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://beorn.cosmic-reionization.github.io"
Documentation = "https://beorn.cosmic-reionization.github.io"
Repository = "https://github.com/cosmic-reionization/beorn.git"
